# rvv-test

./: CMakeLists.txt  README.md  c.c  rvv-m2-vl128.c  rvv-m2.c  rvv.c  speed.c  speed.sh
